# fastapi-boilerplate

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  start.sh
app/models/: response.py
app/utils/: create_response.py
utils/langchain/ollama/: initialize.py
utils/logger/: setup.py
utils/ollama/: async.py
