[tool.poetry]
name = "quiz-master-ai-backend"
version = "0.1.0"
description = ""
authors = ["Piyush Gambhir <90608533+piyush-gambhir@users.noreply.github.com>"]
readme = "README.md"

packages = [
    { include = "app" },
    { include = "utils" },
]


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
ollama = "^0.3.3"
numpy = "<2.0.0"
langchain = "^0.3.3"
openai = "^1.51.2"
langchain-community = "^0.3.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
langchain-ollama = "^0.2.0"
pydantic = "^2.9.2"



[tool.poetry.dev-dependencies]
# No dev dependencies are currently specified


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
